--- a/Assignment 2/restaurantAPI/index.html
+++ b/Assignment 2/restaurantAPI/index.html
@@ -106,7 +106,12 @@
           </div>
           <div class="modal-body">
             <div id="leaflet"></div>
-            <div id="restaurant-address"></div>
+            <br />
+            <strong><div id="restaurant-address"></div></strong>
+            <div>
+              Borough:&nbsp;
+              <strong><span id="restaurant-borough"></span></strong>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">
